# ComputerVision

./: .gitignore  README.md  pyproject.toml  requirements.txt
Projekt/: Convert2PNG.sh  Read_Camera_Image_And_Prognose_Object.py  quadratisch.py  requirements.txt  t_vgg16.py  t_vgg16_vortrainiert.py  t_vgg16_vortrainiert_loss.py  vgg16.py
Projekt/PreVGG16_FALL1/VGG16_model/VGG16_model_2024-09-21_22-44-27/: class_names.json
Projekt/PreVGG16_FALL2/: vgg16_fall2.py
Projekt/PreVGG16_FALL5/: vgg16_fall5.py
Projekt/VGG16_FALL1/: vgg16_fall1.py
Projekt/VGG16_FALL3/: vgg16_fall3.py
Projekt/VGG16_FALL4/: vgg16_fall4.py
Projekt/XC_FALL1/: xc_fall1.py
Projekt/XC_FALL2/: xc_fall2.py
Projekt/XC_FALL3/: xc_fall3.py
Projekt/XC_FALL4/: xc_fall4.py
Projekt/XC_FALL5/: xc_fall5.py
Projekt/cv_dataset/: .gitignore  README.md  main.py
Projekt/training/: pretrained_vgg16_weighted_loss.ipynb  vgg16.ipynb
src/excercise01/: Aufgaben.md  Dokumentation.md  Methoden_Datenergaenzung.md  bike_sales_clean.csv  bike_sales_codified.csv  bikw_sales_reduced.csv  main.py
src/excercise01/.ipynb_checkpoints/: main-checkpoint.py
src/excercise02/: main.py
src/excercise03/: klassifikation.py  main.py  regression.py
src/excercise04/Agricultural-crops/: .gitignore  main.py
src/excercise05/: cnn.ipynb  kamera.py  main.py  myTest.py  train_model.py
