#########################
### PROJECT DEPENDENCIES
###########
[project]
dependencies = [
    "numpy",
    "opencv-python",
    "pandas",
    "tensorflow"
]

name = "CVSS24_Gruppe1"
version = "1.0"
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
